notifications: create mouse gap trap only on hover, re #7116

--- a/public/assets/stylesheets/less/header.less
+++ b/public/assets/stylesheets/less/header.less
@@ -189,7 +189,7 @@
     // Insert invisible padding on top of the arrow in order to try to
     // close the "mouse trap gap" created by the arrow as well as an invisible
     // 25px border to the left
-    &::before {
+    &:hover::before {
         content: "";
         display: block;
         position: absolute;
