MOADB: finetuning license chooser

--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -269,7 +269,7 @@ form.default fieldset.select_terms_of_use {
     }
     > label {
         cursor: pointer;
-        border: 2px solid @base-color-60;
+        border: 1px solid @content-color-40;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -286,10 +286,10 @@ form.default fieldset.select_terms_of_use {
         }
     }
     > label:first-of-type {
-        border-top: 2px solid @base-color-60;
+        border-top: 1px solid @content-color-40;
     }
     > div {
-        border: 2px solid @base-color-60;
+        border: 1px solid @content-color-40;
         border-top: none;
         display: none;
         padding: 10px;
