MOADB: fix some issues

--- a/public/assets/stylesheets/less/tables.less
+++ b/public/assets/stylesheets/less/tables.less
@@ -442,6 +442,9 @@ table.default {
             padding-left: 0px;
             border-left: 2px solid @red;
         }
+        .action-menu {
+            font-weight: normal;
+        }
     }
     > tbody:last-of-type > tr:last-child > td {
         border-bottom: 1px solid @brand-color-darker;
