MOADB: fix some issues

--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -330,3 +330,9 @@ form.default fieldset.select_terms_of_use {
         opacity: 1;
     }
 }
+
+table.documents {
+    td, th {
+        vertical-align: top;
+    }
+}
