MOADB: fix some issues

--- a/public/assets/stylesheets/less/tables.less
+++ b/public/assets/stylesheets/less/tables.less
@@ -461,6 +461,9 @@ table.default {
             padding-right: 10px;
         }
     }
+    td.avatar, th.avatar {
+        padding: 5px;
+    }
     .actions {
         float: right;
         text-align: right;
