--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -64,7 +64,7 @@ div.file_select_possibilities, .folder_type_select_possibilities {
             margin-right: auto;
         }
     }
-    
+
     > label.content_terms_of_use_entry:not(.undecorated)
     {
         width: 40px;
@@ -73,14 +73,14 @@ div.file_select_possibilities, .folder_type_select_possibilities {
         height: 40px;
         min-height: 40px;
         max-height: 40px;
-        
+
         img {
             width:100%;
             height:100%;
             display:block;
         }
     }
-    
+
     > button {
         cursor: pointer;
         width: 140px;
@@ -91,28 +91,28 @@ div.file_select_possibilities, .folder_type_select_possibilities {
         max-height: 140px;
         color: @base-color;
     }
-    
-    
+
+
     > label:not(.undecorated) {
         display: flex;
         justify-content: center;
         font-size:0.7em;
         cursor: pointer;
-        
+
         img {
             width:40%;
             height:40%;
             display:block;
         }
     }
-    
-    
+
+
     /* for file/edit view only: */
-    
+
     input[name=content_terms_of_use_id] {
         display: none;
     }
-    
+
     input[name=content_terms_of_use_id]:checked + label {
         background-color: @brand-color-darker;
         color: @contrast-content-white;
@@ -121,23 +121,23 @@ div.file_select_possibilities, .folder_type_select_possibilities {
             filter: invert(100%) brightness(200%);
         }
     }
-    
-    
+
+
     /* for file/new_edit_folder_form view only: */
-    
+
     input[name=folder_type] {
         display: none;
     }
-    
+
     input[name=folder_type]:checked + label {
         background-color: @brand-color-darker;
         color: @contrast-content-white;
-        
+
         img {
             filter: invert(100%) brightness(200%);
         }
     }
-    
+
 }
 
 div.file_select_possibilities.content_terms_of_use_icons {
@@ -180,8 +180,8 @@ input.document-checkbox[type="checkbox"]:indeterminate + label span {
     /* mobile view: */
     #file_aside, #folder_aside {
         display: block;
-        
-        div.FileIcon, div.FolderIcon {
+
+        div.file-icon, div.folder-icon {
             img {
                 width: 30%;
                 height: 100%;
@@ -189,26 +189,26 @@ input.document-checkbox[type="checkbox"]:indeterminate + label span {
                 margin-right: 1em;
             }
         }
-        
+
         h3 {
             font-size: 140%;
             padding-top: 1em;
         }
-        
+
         dl {
             display: table;
         }
     }
-    
+
     #file_management_forms {
         display: table;
         width: 100%;
     }
-    
+
     .file_preview {
         max-width: 100%;
     }
-    
+
     #file_edit_window, #file_details_window {
         flex-direction: column;
     }
@@ -222,18 +222,18 @@ input.document-checkbox[type="checkbox"]:indeterminate + label span {
         width: 100%;
         max-width: none;
     }
-    
+
 }
 
 @media screen and (min-width: 801px) {
     /* desktop view: */
-    
+
     #file_aside, #folder_aside {
         width: calc(30% - 10px);
         max-width: calc(30% - 10px);
 /*         overflow: hidden; */
-        
-        div.FileIcon, div.FolderIcon {
+
+        div.file-icon, div.folder-icon {
             img {
                 margin-left: 20%;
                 width: 60%;
@@ -241,21 +241,21 @@ input.document-checkbox[type="checkbox"]:indeterminate + label span {
                 height: 100%;
             }
         }
-        
+
         h3 {
             font-size: 1.1em;
         }
     }
-    
+
     #file_management_forms, div#preview_container {
         width: calc(70% - 10px);
         max-width: calc(70% - 10px);
-        
+
         .file_preview {
             max-width: 100%;
         }
     }
-    
+
 }
 
 form.default fieldset.select_terms_of_use {
