--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -9309,42 +9309,16 @@ form.course-wizard-step-0 footer {
 .oversized-image-zoom span img {
   opacity: 0;
 }
-input.i18n,
-textarea.i18n {
-  background-position: right 8px center;
-  background-repeat: no-repeat;
-}
-div.i18n_group.single_lang input,
-div.i18n_group.single_lang textarea {
-  background-image: none !important;
-}
-select.i18n {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background-position: left 4px center;
-  background-repeat: no-repeat;
-  background-size: 20px auto !important;
-  cursor: pointer;
-  padding: 0px 2px 0px 28px !important;
-  width: auto !important;
-  height: 22px;
-}
-select.i18n option {
-  background-position: left 1px center;
-  background-repeat: no-repeat;
-  padding-left: 28px !important;
-}
-.i18n_group:not(.single_lang) {
+div.i18n_group {
   position: relative;
 }
-.i18n_group:not(.single_lang) > select:last-child {
+div.i18n_group > select.i18n {
   border: 0;
   border-right: 1px solid #c5c7ca;
+  border-bottom: 1px solid #c5c7ca;
   border-radius: 0;
   box-sizing: border-box;
   margin: 0 !important;
-  padding: 0;
   position: absolute;
   top: 1px;
   left: 1px;
@@ -9352,26 +9326,23 @@ select.i18n option {
   overflow: hidden;
   max-width: 28px;
   z-index: 2;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-position: left 4px center;
+  background-repeat: no-repeat;
+  background-size: 20px auto;
+  padding: 0px 2px 0px 28px !important;
 }
-.i18n_group:not(.single_lang) > select:-moz-focusring {
-  color: transparent;
-  text-shadow: 0 0 0 #000;
-  -webkit-transition: all 0;
-  -moz-transition: all 0;
-  -o-transition: all 0;
-  transition: all 0;
+div.i18n_group > select.i18n > option {
+  background-position: left 1px center;
+  background-repeat: no-repeat;
+  padding-left: 28px;
 }
-.i18n_group:not(.single_lang).normal-input > select:last-child {
-  bottom: 1px;
-}
-.i18n_group:not(.single_lang).normal-input > input[type=text] {
-  padding-left: 34px !important;
-}
-.i18n_group:not(.single_lang).textarea-input > select:last-child {
-  border-bottom: 1px solid #c5c7ca;
-}
-.i18n_group:not(.single_lang).textarea-input > textarea,
-.i18n_group:not(.single_lang).textarea-input .cktoolbar .cke_inner {
+div.i18n_group > div.i18n > input[type=text],
+div.i18n_group > div.i18n > textarea,
+div.i18n_group > div.i18n .editor_toolbar .buttons,
+div.i18n_group > div.i18n .cktoolbar .cke_inner {
   padding-left: 34px !important;
 }
 #responsive-container {
