--- a/public/assets/stylesheets/less/sidebar.less
+++ b/public/assets/stylesheets/less/sidebar.less
@@ -61,6 +61,11 @@ ul.widget-list {
         padding-left: 20px;
     }
 }
+div#sidebar-navigation {
+    div.sidebar-widget-header {
+        display: none;
+    }
+}
 .widget-links {
     margin: 5px;
     > li img {
@@ -76,13 +81,16 @@ ul.widget-list {
     span[disabled] {
         text-decoration: line-through;
     }
+    &.sidebar-navigation > li {
+        line-height: 2em;
+    }
     &.sidebar-navigation > li.active {
-        background-color: @base-color-40;
-        .box-shadow(inset 0 0 0 1px @base-color-60);
-        #arrow > .right-border(floor((0.5 * @line-height-computed)), @base-color-40, 1px, @base-color-60, -5px);
-
+        background-color: @content-color-20;
+        margin-left: -4px;
+        #arrow > .right-border(14px, @content-color-20, 1px, @content-color-20, -5px);
         a {
-            color: #fff;
+            color: @base-color;
+            padding-left: 4px;            
         }
     }
     &.sidebar-views > li.active {
@@ -90,7 +98,24 @@ ul.widget-list {
         .box-shadow(inset 0 0 0 1px @activity-color);
         #arrow > .right-border(floor((0.5 * @line-height-computed)), @activity-color-40, 1px, @activity-color, -5px);
     }
-    &.sidebar-navigation > li, &.sidebar-views > li {
+    &.sidebar-navigation > li {
+        padding-left: 5px;
+        &.active {
+            &:before, &:after {
+                margin-left: -1px;
+            }
+            display: block;
+
+            // Obtuse angle looks kinda ugly with borders
+            &:before {
+                border-left-width: floor((14px * 2 / 3));
+            }
+            &:after {
+                border-left-width: floor((14px * 2 / 3 - 1));
+            }
+        }
+    }
+    &.sidebar-views > li {
         padding-left: 5px;
         &.active {
             &:before, &:after {
