--- a/public/assets/stylesheets/less/responsive.less
+++ b/public/assets/stylesheets/less/responsive.less
@@ -188,6 +188,10 @@ label[for="responsive-toggle"] {
             display: none;
         }
 
+        #avatar-arrow {
+            display: none;
+        }
+
         &::after {
             display: none !important;
         }
