--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -2146,9 +2146,6 @@ form.default label.packed button {
   color: #fff;
 }
 #notification_container {
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  border-radius: 2px;
   width: 105px;
   height: 25px;
   border: thin solid #d8dadc;
@@ -9626,6 +9623,9 @@ label[for="responsive-toggle"]::before {
     line-height: 20px !important;
   }
   #barTopAvatar #header_avatar_menu {
+    display: none;
+  }
+  #barTopAvatar #avatar-arrow {
     display: none;
   }
   #barTopAvatar::after {
