avatarmenu now fixed in barBottomContainer, re #7116

--- a/public/assets/stylesheets/less/navigation-hoverborder.less
+++ b/public/assets/stylesheets/less/navigation-hoverborder.less
@@ -85,7 +85,7 @@ body:not(.fixed) #barTopMenu {
     }
 }
 
-#barTopAvatar {
+/*#barTopAvatar {
     &:not(.fixed) {
         &, &.active, &:hover {
             line-height: 25px;
@@ -101,4 +101,4 @@ body:not(.fixed) #barTopMenu {
             }
         }
     }
-}
+}*/
