--- a/public/assets/stylesheets/less/responsive.less
+++ b/public/assets/stylesheets/less/responsive.less
@@ -1,7 +1,7 @@
 @import (reference) "breakpoints.less";
 @import (reference) "visibility.less";
 
-@header-bar-container-height: 35px;
+@header-bar-container-height:40px;
 
 @responsive-menu-width: 270px;
 @responsive-menu-shadow-width: 6px;
@@ -248,7 +248,7 @@ label[for="responsive-toggle"] {
 
     #notification_container {
         position: inherit !important;
-        top: 8px;
+        /*top: 8px;*/
         width: 32px;
         height: 20px;
     }
