--- a/public/assets/stylesheets/less/header.less
+++ b/public/assets/stylesheets/less/header.less
@@ -41,67 +41,58 @@
         align-items: center;
         justify-content: space-between;
         list-style-type: none;
-        height: 30px;
+        height: 40px;
         padding: 0;
         > li {
             margin: 2px;
         }
     }
+
+    #quicksearch_item {
+        
+
+        input[type="text"] {
+            height: 26px;
+            width: 273px;
+        }
+
+        .quicksearchbutton {
+            margin: 7px 8px;
+        }
+
+        padding-right: 20px;
+    }
 }
 
 #barTopAvatar {
-    display: inline;
-    /*position: absolute;*/
-    bottom: -45px;
-    right: -40px;
-    padding-bottom: 20px !important;
+    display: inline-flex;
 
     #avatar-arrow {
-        position: relative;
-        top: 7px;
-        left: -2px;
+        position: relative;        
         float: right;
         z-index: 1;
+        margin: 7px 8px;
     }
+}
 
-    &.fixed {
-        position: relative;
-        bottom: 1px;
-        right: 2px;
-
-        #avatar-arrow {
-            display: none;
-        }
-    }
-
+.header_avatar_container {
+    padding-right: 10px;
 }
 
 #barTopAvatar, #header_avatar_menu {
 
     #header_avatar, .action-menu-icon {
-        border: 1px solid @base-color;
+        border: 1px solid @dark-gray-color-40;
         background: @dark-gray-color-5;
-        height: 42px;
-        width: 42px;
+        height: 28px;
+        width: 28px;
         z-index: 1;
         position: relative;
-        top: 35px;
-        left: 44px;
 
         img {
             height: 100%;
             width: 100%;
         }
-
-        &.fixed {
-            .border-radius(1px);
-            border: thin solid @base-color-20;
-            height: 19px;
-            width: 19px;
-            top: 21px;
-            left: 41px;
-        }
-
     }
 
     .action-menu-title{
@@ -111,18 +102,13 @@
     .action-menu-content {
         z-index: 1002;
         position: absolute;
-        top: 89px;
-        right: -42px;
-        padding: 4px 28px 4px 8px;
+        top: 32px;
+        right: -18px;
+        /*padding: 4px 28px 4px 8px;*/
         background: #fff;
         box-shadow: 1px 1px 1px @dark-gray-color-60;
         text-align: left;
         white-space: nowrap;
-
-        &.fixed {
-            top: 20px;
-            right: -42px;
-        }
 
         a {
             color: @base-color;
@@ -132,31 +118,6 @@
             color: #000;
         }
     }
-/*
-    .action-menu-content:before, .action-menu-content:after {
-        bottom: 100%;
-        right: 13px;
-        border: solid transparent;
-        content: " ";
-        height: 0;
-        width: 0;
-        position: absolute;
-        pointer-events: none;
-    }
-
-    .action-menu-content:before {
-        border-color: rgba(194, 225, 245, 0);
-        border-bottom-color: #8b8f95;
-        border-width: 9px;
-        margin-left: -8px;
-    }
-    .action-menu-content:after {
-        border-color: rgba(194, 225, 245, 0);
-        border-bottom-color: #e7ecf2;
-        border-width: 8px;
-        margin-left: -8px;
-    }
-*/
 }
 
 .header_avatar_container, #header_avatar_menu .action-menu-icon {
@@ -165,18 +126,19 @@
 
 #notification_marker {
     //.transition(all 1s);
-    width: 25px;
+    width: 48px;
     margin-left: 0px;
-    padding-left: 10px;
-    margin-right: 57px;
-    padding-right: 8px;
-    height: 25px;
+    padding-left: 0px;
+    margin-right: 0px;
+    padding-right: 0px;
+    height: 28px;
     font-size: 0.8em;
     color: @base-color;
     text-align: center;
-    line-height: 25px;
+    line-height: 28px;
     vertical-align: text-bottom;
-    background-color: transparent;
+    background-color: @dark-gray-color-10;
+    border: 1px solid @dark-gray-color-40;
 
     &.alert {
         border: thin solid @white;
@@ -191,12 +153,12 @@
     @list-width: 400px;
 
     //.transition(all 1s);
-    width: 105px;
-    height: 25px;
-    border: thin solid @dark-gray-color-20;
+    width: 49px;
+    height: 30px;
+    /*border: thin solid @dark-gray-color-20;*/
     color: @base-color;
     vertical-align: text-bottom;
-    background-color: @dark-gray-color-10;
+    background-color: @base-color;
     position: relative;
 
     // Insert invisible padding on top of the arrow in order to try to
@@ -221,18 +183,6 @@
         width: 25px;
     }
 
-    &.fixed {
-        width: 60px;
-        height: 19px;
-
-        #notification_marker {
-            width: 29px;
-            padding-left: 5px;
-            padding-right: 5px;
-            height: 19px;
-            line-height: 19px;
-        }
-    }
     .list, li&:hover .list { display: none; }
     &.hoverable:hover {
         .list { display: block; }
@@ -356,7 +306,10 @@
     }
 }
 #barTopFont {
-    display: none;
+    display: inline;
+    color: @white;
+    margin-left: 16px;
+    z-index: 1002;
 }
 
 .studip-logo {
@@ -375,7 +328,7 @@
 #barTopStudip {
     position: absolute;
     bottom: -10px;
-    right: 50px;
+    right: 18px;
 }
 
 #barTopLogo {
