fixed padding of elements in barBottomright, re #7116

--- a/public/assets/stylesheets/less/header.less
+++ b/public/assets/stylesheets/less/header.less
@@ -42,14 +42,14 @@
         justify-content: space-between;
         list-style-type: none;
         height: 40px;
-        padding: 0;
+        padding: 0px;
         > li {
             margin: 2px;
+            padding: 0px 10px;
         }
     }
 
-    #quicksearch_item {
-        
+    #quicksearch_item {        
 
         input[type="text"] {
             height: 26px;
@@ -59,8 +59,6 @@
         .quicksearchbutton {
             margin: 7px 8px;
         }
-
-        padding-right: 20px;
     }
 }
 
@@ -73,10 +71,6 @@
         z-index: 1;
         margin: 7px 8px;
     }
-}
-
-.header_avatar_container {
-    padding-right: 10px;
 }
 
 #barTopAvatar, #header_avatar_menu {
