--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -2004,15 +2004,12 @@ form.default label.packed button {
   justify-content: space-between;
   list-style-type: none;
   height: 40px;
-  padding: 0;
+  padding: 0px;
 }
 #barBottomright > ul > li,
 #layout_footer > ul > li {
   margin: 2px;
-}
-#barBottomright #quicksearch_item,
-#layout_footer #quicksearch_item {
-  padding-right: 20px;
+  padding: 0px 10px;
 }
 #barBottomright #quicksearch_item input[type="text"],
 #layout_footer #quicksearch_item input[type="text"] {
@@ -2031,9 +2028,6 @@ form.default label.packed button {
   float: right;
   z-index: 1;
   margin: 7px 8px;
-}
-.header_avatar_container {
-  padding-right: 10px;
 }
 #barTopAvatar #header_avatar,
 #header_avatar_menu #header_avatar,
