--- a/public/assets/stylesheets/less/header.less
+++ b/public/assets/stylesheets/less/header.less
@@ -28,14 +28,32 @@
     }
 }
 
-#barBottomright, #layout_footer {
+
+#layout_footer,
+#barBottomright {
     a {
         color: @contrast-content-white;
         margin: 0 6px;
         text-decoration: none;
         &:hover { color: @contrast-content-hovergray; }
     }
+}
 
+#layout_footer {
+    > ul {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        list-style-type: none;
+        height: 30px;
+        padding: 0px;
+        > li {
+            margin: 2px;
+        }
+    }
+}
+
+#barBottomright {
     > ul {
         display: flex;
         align-items: center;
