--- a/public/assets/stylesheets/less/layouts.less
+++ b/public/assets/stylesheets/less/layouts.less
@@ -109,6 +109,7 @@
     flex: 1;
     margin-left: 8px;
     margin-top: 2px;
+    line-height: 28px;
 }
 
 #layout_wrapper {                // the main flex, dividing all elements into flexing rows
