navigation overflow: adjust to new conditions, re #7326

--- a/public/assets/stylesheets/less/header.less
+++ b/public/assets/stylesheets/less/header.less
@@ -67,7 +67,7 @@
         }
     }
 
-    #quicksearch_item {        
+    #quicksearch_item {
 
         input[type="text"] {
             height: 26px;
@@ -84,7 +84,7 @@
     display: inline-flex;
 
     #avatar-arrow {
-        position: relative;        
+        position: relative;
         float: right;
         z-index: 1;
         margin: 7px 8px;
@@ -338,9 +338,8 @@
 }
 
 #barTopStudip {
-    position: absolute;
-    bottom: -10px;
-    right: 18px;
+    margin-left: 20px;
+    margin-right: 18px;
 }
 
 #barTopLogo {
@@ -349,14 +348,11 @@
     top: 0;
 }
 
-#header {
-    height: @header-height;
-    background-color: @dark-gray-color-5;
-}
-
 
 #flex-header {
+    height: @header-height;
+    background-color: @dark-gray-color-5;
+
     position: relative;
     z-index: 3;
 }
-
