./check_utf8 2>/dev/null | xargs recode cp1252/..utf-8, re #6926

--- a/public/assets/stylesheets/print.css
+++ b/public/assets/stylesheets/print.css
@@ -1,6 +1,6 @@
 /*******************************************************************************
-    Druck-Stylesheet für Stud.IP
-    - nur pt Größenangaben verwenden
+    Druck-Stylesheet fÃ¼r Stud.IP
+    - nur pt GrÃ¶ÃŸenangaben verwenden
     - auf background-colors verzichten (werden nicht gedruckt)
 *******************************************************************************/
 html,
