--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -1733,7 +1733,7 @@ form.default label.packed button {
   background-size: 40px 100%, 40px 100%, 14px 100%, 14px 100%;
   /* Opera doesn't support this in the shorthand */
   background-attachment: local, local, scroll, scroll;
-  margin: 0 12px 12px 20px;
+  padding: 0 12px 12px 20px;
   vertical-align: top;
   min-width: 400px;
 }
@@ -2061,6 +2061,7 @@ form.default label.packed button {
   float: right;
   z-index: 1;
   margin: 7px 8px;
+  cursor: pointer;
 }
 #barTopAvatar #header_avatar,
 #header_avatar_menu #header_avatar,
