--- a/public/assets/stylesheets/less/tabs.less
+++ b/public/assets/stylesheets/less/tabs.less
@@ -36,9 +36,8 @@ div.clear
 
     li {
         background-color: @dark-gray-color-10;
-        padding: 5px 5px 2px 5px;
-        margin-right: 0px;
-        margin-left: 10px;
+        padding: 0px 5px 2px 5px;
+        margin: 3px 0px 4px 10px;
 
         &:last-child {
             border-right: none;
@@ -50,13 +49,13 @@ div.clear
             //background-color: #fff;
             border-bottom: 3px solid @dark-gray-color-30;
             color: @base-color;
-            padding-top: 3px;
+            padding-top: 0px;
             padding-bottom: 1px;
         }
 
         &.current {
             border-bottom: 3px solid @dark-gray-color-80;
-            padding-top: 3px;
+            padding-top: 0px;
             padding-bottom: 1px;
             line-height: 25px;
             a, span.quiet {
