--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -4733,7 +4733,7 @@ input.quicksearchbox {
   padding: 10px;
   position: fixed;
   top: 20px;
-  z-index: 1000;
+  z-index: 3000;
 }
 #skip_link_navigation ul {
   list-style-type: none;
@@ -4801,9 +4801,8 @@ div.clear {
 #tabs li,
 .smiley-tabs li {
   background-color: #ececed;
-  padding: 5px 5px 2px 5px;
-  margin-right: 0px;
-  margin-left: 10px;
+  padding: 0px 5px 2px 5px;
+  margin: 3px 0px 4px 10px;
 }
 #tabs li:last-child,
 .smiley-tabs li:last-child {
@@ -4817,13 +4816,13 @@ div.clear {
 .smiley-tabs li:hover {
   border-bottom: 3px solid #c5c7ca;
   color: #28497c;
-  padding-top: 3px;
+  padding-top: 0px;
   padding-bottom: 1px;
 }
 #tabs li.current,
 .smiley-tabs li.current {
   border-bottom: 3px solid #646a72;
-  padding-top: 3px;
+  padding-top: 0px;
   padding-bottom: 1px;
   line-height: 25px;
 }
@@ -10199,7 +10198,6 @@ body:not(.fixed) #barTopMenu .overflow li:hover::after {
 #tabs > li:hover,
 #tabs2 > li:hover {
   line-height: 25px;
-  padding-top: 3px;
 }
 #tabs > li.current,
 #tabs2 > li.current {
