--- a/public/assets/stylesheets/less/my_courses.less
+++ b/public/assets/stylesheets/less/my_courses.less
@@ -1,22 +1,12 @@
 table.default {
     tr.has-subcourses {
-        box-shadow: 0 5px 5px -4px black;
+        border-bottom: 1px solid @dark-gray-color-75;
     }
     tr.subcourses {
-        &:last-child {
-            background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.25));
-            background-size: 100% 4px;
-            background-position: bottom;
-            background-repeat: no-repeat;
-        }
 
-        td:first-child {
-            margin-left: 20px;
-        }
+        background-color: @dark-gray-color-5;
 
-        td:nth-child(2),
-        td:nth-child(3),
-        td:nth-child(4) {
+        td:nth-child(-n+4) {
             padding-left: 20px;
         }
     }
