--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -8000,21 +8000,13 @@ form.settings-avatar footer {
     text-align: center;
   }
 }
-table.default tr.has-subcourses {
-  box-shadow: 0 5px 5px -4px black;
+table.default tr.has-subcourses td {
+  border-bottom: 1px solid #6c737a;
 }
-table.default tr.subcourses:last-child {
-  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.25));
-  background-size: 100% 4px;
-  background-position: bottom;
-  background-repeat: no-repeat;
+table.default tr.subcourses {
+  background-color: #f5f5f6;
 }
-table.default tr.subcourses td:first-child {
-  margin-left: 20px;
-}
-table.default tr.subcourses td:nth-child(2),
-table.default tr.subcourses td:nth-child(3),
-table.default tr.subcourses td:nth-child(4) {
+table.default tr.subcourses td:nth-child(-n+4) {
   padding-left: 20px;
 }
 @media (max-width: 767px) {
