--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -2406,26 +2406,13 @@ body:not(.fixed) #barTopMenu a span {
 body:not(.fixed) #barTopMenu a span.new {
   background-position: -64px 0;
 }
-body:not(.fixed) #barTopMenu a img.original {
+body:not(.fixed) #barTopMenu a img {
   margin: 5px 0px;
   width: 28px;
   height: 28px;
 }
-body:not(.fixed) #barTopMenu a canvas.punch {
-  display: none;
-  margin: 0px;
-  margin-bottom: 5px;
-  width: 42px;
-  height: 32px;
-}
 body:not(.fixed) #barTopMenu a[data-badge]:not([data-badge="0"]) {
   position: relative;
-}
-body:not(.fixed) #barTopMenu a[data-badge]:not([data-badge="0"]).canvasready img.original {
-  display: none;
-}
-body:not(.fixed) #barTopMenu a[data-badge]:not([data-badge="0"]).canvasready canvas.punch {
-  display: inline-block;
 }
 body:not(.fixed) #barTopMenu a[data-badge]:not([data-badge="0"])::before,
 body:not(.fixed) #barTopMenu a[data-badge]:not([data-badge="0"])::after {
@@ -2435,23 +2422,16 @@ body:not(.fixed) #barTopMenu a[data-badge]:not([data-badge="0"])::after {
   top: 0;
 }
 body:not(.fixed) #barTopMenu a[data-badge]:not([data-badge="0"])::before {
-  background-color: #d60000;
-  border-radius: 8px;
-  content: ' ';
-  display: inline-block;
   width: 16px;
   height: 16px;
-}
-body:not(.fixed) #barTopMenu a[data-badge]:not([data-badge="0"])::after {
-  content: attr(data-badge);
+  background-color: #d60000;
+  border: 3px solid #f5f6f6;
+  border-radius: 50%;
   color: white;
-  width: 16px;
-  text-align: right;
+  content: attr(data-badge);
+  display: inline-block;
   font-size: 10px;
-  text-align: center;
-  text-overflow: ellipsis;
-  vertical-align: top;
-  white-space: nowrap;
+  z-index: 2;
 }
 body:not(.fixed) #barTopMenu > li > a .navtitle,
 body:not(.fixed) #barTopMenu > li > label .navtitle {
@@ -2465,8 +2445,7 @@ body:not(.fixed) #barTopMenu > li > label .navtitle {
   transform: translate(-50%, 0);
   opacity: 0;
 }
-body:not(.fixed) #barTopMenu img,
-body:not(.fixed) #barTopMenu canvas {
+body:not(.fixed) #barTopMenu img {
   -webkit-filter: hue-rotate(350deg) saturate(8.7%) brightness(177.3%) !important;
   filter: hue-rotate(350deg) saturate(8.7%) brightness(177.3%) !important;
 }
@@ -2490,8 +2469,6 @@ body:not(.fixed) #barTopMenu li:hover .navtitle,
 body:not(.fixed) #barTopMenu li.active .navtitle {
   opacity: 1;
 }
-body:not(.fixed) #barTopMenu li:hover > a canvas,
-body:not(.fixed) #barTopMenu li.active > a canvas,
 body:not(.fixed) #barTopMenu li:hover > a img,
 body:not(.fixed) #barTopMenu li.active > a img {
   -webkit-filter: hue-rotate(0deg) saturate(100%) brightness(100%) !important;
@@ -2568,8 +2545,7 @@ body:not(.fixed) #barTopMenu > .overflow > ul li a {
   align-items: center;
   padding: 0.5em 1em;
 }
-body:not(.fixed) #barTopMenu > .overflow > ul li img,
-body:not(.fixed) #barTopMenu > .overflow > ul li canvas {
+body:not(.fixed) #barTopMenu > .overflow > ul li img {
   -webkit-box-flex: 1;
   -webkit-flex: 1 0 24px;
   -ms-flex: 1 0 24px;
@@ -2633,10 +2609,6 @@ body.fixed #barTopMenu {
   list-style: none;
   margin: 0 -10px;
   padding: 0;
-  display: none;
-}
-body.fixed #barTopMenu #nav_extra,
-body.fixed #barTopMenu canvas {
   display: none;
 }
 body.fixed #barTopMenu img {
@@ -8000,11 +7972,11 @@ form.settings-avatar footer {
     text-align: center;
   }
 }
-table.default tr.has-subcourses td {
-  border-bottom: 1px solid #6c737a;
+table.default tr.has-subcourses {
+  border-bottom: 1px solid #6d737b;
 }
 table.default tr.subcourses {
-  background-color: #f5f5f6;
+  background-color: #f5f6f6;
 }
 table.default tr.subcourses td:nth-child(-n+4) {
   padding-left: 20px;
@@ -10155,9 +10127,6 @@ body:not(.fixed) #barTopMenu:hover > li:not(:hover)::after {
   left: 50%;
   right: 50%;
   opacity: 0;
-}
-body:not(.fixed) #barTopMenu #nav_extra::after {
-  display: none;
 }
 body:not(.fixed) #barTopMenu .action-menu-icon {
   transform: rotate(-90deg);
