fine tune "medium mobile view", fixes #7317

--- a/public/assets/stylesheets/less/mobile.less
+++ b/public/assets/stylesheets/less/mobile.less
@@ -1,5 +1,12 @@
 .media-breakpoint-small-down({
   #layout_wrapper { min-width: 0 !important; }
+  #index div.index_container .messagebox,
+  #request_new_password div.index_container .messagebox,
+  #web_migrate div.index_container .messagebox {
+    margin-top: 110px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 });
 
 .media-breakpoint-tiny-down({
