--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -7985,6 +7985,13 @@ table.default tr.subcourses td:nth-child(-n+4) {
   #layout_wrapper {
     min-width: 0 !important;
   }
+  #index div.index_container .messagebox,
+  #request_new_password div.index_container .messagebox,
+  #web_migrate div.index_container .messagebox {
+    margin-top: 110px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 @media (max-width: 575px) {
   #barTopStudip img {
